Add droplet to firewall

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ DOMAIN_NAME="example.com"
 
 # These are the flags used when creating the droplet.
 DROPLET_CONFIG="--region fra1 --size s-4vcpu-8gb --enable-ipv6 --ssh-keys xx:xx:xx:xx:xx:xx:xx:xx:xx:xx:xx:xx:xx:xx:xx:xx"
+
+# This is the ID of the firewall configuration to apply to the droplet.
+FIREWALL_ID="00000000-0000-0000-0000-000000000000"
